       has local modifications. (Stefan)
- NEW: Option to jump to the first conflict in TortoiseMerge. (Stefan)
- NEW: new overlay icon set "Function" with icons that cover less
       of the original icon. (Lazare Inepologlou)
- NEW: Revision graph: Show range of last committed and range 
       of current revisions in working copy (Stefan Fuhrmann)
- NEW: TortoiseUDiff accepts input from a pipe. It can be used now
       like this:
       $ svn diff | TortoiseUDiff.exe -p
- NEW: TortoiseMerge can jump to the next/prev inline diff. (Stefan)
- NEW: Adjusting externals to a fixed revision when 
       branching/tagging. (Stefan)
- NEW: Filter matches in the log dialog are highlighted. (Stefan)
- NEW: Custom Win7 Library for SVN working copies. (Stefan)
- NEW: Filter matches in the log dialog are highlighted. (Stefan)
- NEW: Only one instance of TSVNCache is used on x64 OS if
       both the win32 and x64 version of TSVN are installed. (Stefan)
- NEW: custom dialogs to edit specific properties. (Stefan)
- NEW: In "select revision" dialog, use the revision selected
       in the log dialog. (Stefan Fuhrmann)
- NEW: The date-range filter controls are hidden if filtering
       for date ranges is not enabled. (Stefan)
- NEW: pre-connect hook script, useful to start a VPN
       connection. (Stefan)
- NEW: Wrapping of long lines in TortoiseMerge. (Stefan)
- BUG: Merged revisions must be counted only 
       once in stats (Stefan Fuhrmann)
- BUG: Relative Webviewer urls didn't work from the 
       repository browser. (Stefan)

Version 1.6.10
- BUG: Updating single items from the check-for-modifications
       dialog could lead to inconsistent working copies. (Stefan)
- BUG: Adding a file in an unversioned folder from the commit
       dialog only marked the file as added. (Stefan)
- BUG: The overlays didn't work on win2k up to XP SP2. (Stefan)
- BUG: The 'browse' button (...) in various dialogs did nothing
       when a file:/// url was specified. (Stefan)

Version 1.6.9